Added readme file

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9ad3e2060e8a46068069c346e56f7ef0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Text(value='', placeholder='Enter your name')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from ipywidgets import widgets\n",
     "from IPython.display import display\n",
@@ -12,7 +27,7 @@
     "input_name = widgets.Text(placeholder='Enter your name')\n",
     "# Display the text input widget\n",
     "display(input_name)\n",
-    "NAME = \"-\"\n",
+    "NAME = \"Harsha\"\n",
     "# Function to handle text input change\n",
     "def handle_text_change(change):\n",
     "    global NAME\n",
@@ -30,9 +45,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User name : Harsha\n",
+      "Harsha says hello\n",
+      "Harsha mentions the need for water\n",
+      "Harsha mentions experiencing discomfort\n",
+      "Harsha mentions experiencing discomfort\n",
+      "Harsha mentions experiencing discomfort\n",
+      "Harsha mentions the need to use the restroom\n",
+      "Harsha mentions the need for water\n",
+      "Harsha mentions experiencing discomfort\n",
+      "Harsha mentions experiencing discomfort\n",
+      "Harsha mentions experiencing discomfort\n",
+      "Harsha mentions the need for water\n",
+      "Harsha mentions experiencing discomfort\n",
+      "Harsha mentions experiencing discomfort\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import mediapipe as mp\n",
@@ -44,6 +80,7 @@
     "\n",
     "# WIDTH = 960 #640\n",
     "# HEIGHT = 540 #480\n",
+    "#\tADJUST THE HEIGHT AND WIDTH, AS PER CAMERA RESOLUTIONS ONLY\n",
     "WIDTH = 640\n",
     "HEIGHT = 480\n",
     "\n",
@@ -63,7 +100,7 @@
     "sleep_timer = MAX_SLEEP_TIME\n",
     "\n",
     "# NAME = \"Harsha\"\n",
-    "print(\"Name :\",NAME)\n",
+    "print(\"User name :\",NAME)\n",
     "\n",
     "def getX(x):\n",
     "\treturn x*WIDTH\n",
@@ -92,7 +129,7 @@
     "\t\telse:\n",
     "\t\t\tfingers.append(0)\n",
     "\t# print(fingers)\n",
-    "\n",
+    "\t# LIST OF VALUES FROM THUMB FINGER TO PINKY FINGER\n",
     "\tif fingers == [1, 1, 1, 1, 1]:\n",
     "\t\treturn {\"text\": f\"{NAME} says hello\", \"message\": \"Hello\"}\n",
     "\telif fingers == [1, 0, 0, 0, 0]:\n",
@@ -130,7 +167,7 @@
     "\telse:\n",
     "\t\treturn \"erase\"\n",
     "\n",
-    "def index_raised(yi, y9):\n",
+    "def index_middle_fingers_raised(yi, y9):\n",
     "\tif (y9 - yi) > 40:\t# difference between middle finger's bottom line and tip > 40\n",
     "\t\treturn True\n",
     "\treturn False\n",
@@ -157,11 +194,11 @@
     "cv2.line(tools, (200,0), (200,50), (0,0,255), 2)\n",
     "'''\n",
     "\n",
-    "# cap = cv2.VideoCapture(0)\t#object of 0 - default camera\n",
-    "# cap.set(cv2.CAP_PROP_FRAME_WIDTH, WIDTH)\n",
-    "# cap.set(cv2.CAP_PROP_FRAME_HEIGHT, HEIGHT)\n",
+    "cap = cv2.VideoCapture(0)\t#object of 0 - default camera\n",
+    "cap.set(cv2.CAP_PROP_FRAME_WIDTH, WIDTH)\n",
+    "cap.set(cv2.CAP_PROP_FRAME_HEIGHT, HEIGHT)\n",
     "\n",
-    "while False:\n",
+    "while True:\n",
     "\t# width  = cap.get(cv2.CAP_PROP_FRAME_WIDTH)   # float `width`\n",
     "\t# height = cap.get(cv2.CAP_PROP_FRAME_HEIGHT)  # float `height`\n",
     "\t# print('width, height:', width, height)\n",
@@ -219,7 +256,7 @@
     "\t\t\t\txi, yi = int(getX(i.landmark[12].x)), int(getY(i.landmark[12].y))\n",
     "\t\t\t\ty9  = int(getY(i.landmark[9].y))\t#landmark[9] - middle fingers bottom line \n",
     "\n",
-    "\t\t\t\tif index_raised(yi, y9):\n",
+    "\t\t\t\tif index_middle_fingers_raised(yi, y9):\n",
     "\t\t\t\t\tcv2.line(mask, (prevx, prevy), (x, y), 0, thick)\n",
     "\t\t\t\t\tprevx, prevy = x, y\n",
     "\n",
@@ -233,7 +270,7 @@
     "\t\t\t\txi, yi = int(getX(i.landmark[12].x)), int(getY(i.landmark[12].y))\n",
     "\t\t\t\ty9  = int(getY(i.landmark[9].y))\t#landmark[9] - middle fingers bottom line \n",
     "\n",
-    "\t\t\t\tif index_raised(yi, y9):\n",
+    "\t\t\t\tif index_middle_fingers_raised(yi, y9):\n",
     "\t\t\t\t\tif not(var_inits):\n",
     "\t\t\t\t\t\txii, yii = x, y\n",
     "\t\t\t\t\t\tvar_inits = True\n",
@@ -249,7 +286,7 @@
     "\t\t\t\txi, yi = int(getX(i.landmark[12].x)), int(getY(i.landmark[12].y))\n",
     "\t\t\t\ty9  = int(getY(i.landmark[9].y))\t#landmark[9] - middle fingers bottom line \n",
     "\n",
-    "\t\t\t\tif index_raised(yi, y9):\n",
+    "\t\t\t\tif index_middle_fingers_raised(yi, y9):\n",
     "\t\t\t\t\tif not(var_inits):\n",
     "\t\t\t\t\t\txii, yii = x, y\n",
     "\t\t\t\t\t\tvar_inits = True\n",
@@ -265,7 +302,7 @@
     "\t\t\t\txi, yi = int(getX(i.landmark[12].x)), int(getY(i.landmark[12].y))\n",
     "\t\t\t\ty9  = int(getY(i.landmark[9].y))\t#landmark[9] - middle fingers bottom line \n",
     "\n",
-    "\t\t\t\tif index_raised(yi, y9):\n",
+    "\t\t\t\tif index_middle_fingers_raised(yi, y9):\n",
     "\t\t\t\t\tif not(var_inits):\n",
     "\t\t\t\t\t\txii, yii = x, y\n",
     "\t\t\t\t\t\tvar_inits = True\n",
@@ -281,7 +318,7 @@
     "\t\t\t\txi, yi = int(getX(i.landmark[12].x)), int(getY(i.landmark[12].y))\n",
     "\t\t\t\ty9  = int(getY(i.landmark[9].y))\t#landmark[9] - middle fingers bottom line \n",
     "\n",
-    "\t\t\t\tif index_raised(yi, y9):\n",
+    "\t\t\t\tif index_middle_fingers_raised(yi, y9):\n",
     "\t\t\t\t\tcv2.circle(frame, (x, y), 30, (0,0,0), -1)\n",
     "\t\t\t\t\tcv2.circle(mask, (x, y), 30, 255, -1)\t#clearing into white\n",
     "\n",
